# duck-lisp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.md  assembler.c  compiler-debug.c  duckLisp.c  duckLisp.h  duckVM.c  duckVM.h  emitters.c  emitters.h  gc.c  gc.h  generators.c  generators.h  internals.md  language-reference.md  language.md  parenthesis-inference.md  parenthesis-inferrer.c  parenthesis-inferrer.h  parser.c  parser.h  scratchwork.txt
DuckLib/: CMakeLists.txt  array.c  array.h  core.c  core.h  memory.c  memory.h  sort.c  sort.h  string.c  string.h  trie.c  trie.h
docs/: api.md  faq.md  internals.md  language-reference.md  language.md  memory-allocator.md  parenthesis-inference.md
scratchwork/: 0.dl  1.dl  2.dl  3.dl  CMakeLists.txt  allocation.txt  compile.txt  duckLisp-dev.c  duckLisp-test.c  example-script-call.c  example.c  fibonacci.dl  memory-dev.c  memory-dev.sh  multiply.dl  passes.txt  power-function.dl  progn.dl  pseudo-bytecode.txt  sort-test.c  sort.txt  stack-vars.dl  syntax.txt  trie-dev.c  utf-8.dl
scratchwork/.cache/clangd/index/: duckLisp-dev.c.CDEA4910E91A2546.idx  memory-dev.c.793DD655072B0B09.idx  sort-test.c.0E771EF7E26BEAC9.idx  trie-dev.c.7CAE8AAA4C6E9F51.idx
scratchwork/scripts/: #mcnugget.dl#  0.dl  1.dl  2.dl  3.dl  add-test.dl  array.dl  better-cons.dl  bothtime.dl  class.hna  closure.dl  comptime.dl  constexpr.dl  enum.hna  factorial.dl  factorial.hna  fibonacci.dl  fizz-buzz.dl  fizz-buzz.hna  funcall.dl  functions.dl  hal.dl  hanabi-test.hna  happy-ending.hna  if.dl  inc.hna  intern.hna  label-value.dl  lazy.hna  leak.dl  leaky.hna  library.dl  library.hna  lisp.dl  list-ops.dl  list.dl  macros.dl  man-or-boy.hna  mcnugget.dl  multiply.dl  (+24 more)
tests/: apply.dl  closure.dl  comptime-comptime.dl  comptime-macro-bug.dl  length.dl  lisp-2.dl  quote-boolean.dl  quote-float.dl  quote-integer.dl  quote-list.dl  quote-string.dl  recursion.dl  self-release-upvalues.dl  unless.dl  when.dl
